# StereoscopicProject

./: notes.md  projectNotes.md
ApplyStereoRectification/: Makefile  main.cpp  sideNotes.cpp  stereoRectify
CalculateCameraMatrixAndCoefficientsSingleCamera/: LeftCamera0.yaml  Makefile  RightCamera1.yaml  calibrateLeftCamera  calibrateRightCamera  main.cpp  notes.md
CapturePictureDualCamera/: Makefile  dual-camera.cpp  dualCameraTakePictures
Conduct Camera Calibration/: main.cpp  original.cpp
ConductCameraCalibrationDualCamera/: DualCameraCalibration  Makefile  calibrationDualCamera.cpp  leftCamera.yaml  rightCamera.yaml  sideNotes.cpp  stereoCalibrate.yaml
StereoRectification/: Makefile  dual-camera.cpp  goals.cpp  leftCamera.yaml  rightCamera.yaml  sideNotes.cpp  stereoCalibrate.yaml  stereoRectification
c++/: Makefile  camera_calibration.cpp  main.cpp  notes.md  single-camera
c++/Conduct Camera Calibration/: CMakeLists.txt  cameraCalibrationValues.txt
